crates/fig-parser/tests/snapshots/integration_tests__functions__body_with_locals.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: compute
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Let:
              annotations: []
              name: a
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - x
                  op: Add
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "1"
                      suffix: ~
          - Let:
              annotations: []
              name: b
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - a
                  op: Multiply
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "2"
                      suffix: ~
          - Return:
              Path:
                segments:
                  - b
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: multi_step
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: n
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Let:
              annotations: []
              name: step1
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - n
                  op: Multiply
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "2"
                      suffix: ~
          - Let:
              annotations: []
              name: step2
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - step1
                  op: Add
                  rhs:
                    IntegerLiteral:
                      base: Decimal
                      digits: "10"
                      suffix: ~
          - Let:
              annotations: []
              name: step3
              ty: ~
              value:
                BinaryOp:
                  lhs:
                    Path:
                      segments:
                        - step2
                  op: Subtract
                  rhs:
                    Path:
                      segments:
                        - n
          - Return:
              Path:
                segments:
                  - step3
