crates/fig-parser/tests/snapshots/integration_tests__functions__calling_functions.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: double
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Return:
              BinaryOp:
                lhs:
                  Path:
                    segments:
                      - x
                op: Multiply
                rhs:
                  IntegerLiteral:
                    base: Decimal
                    digits: "2"
                    suffix: ~
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: quadruple
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Return:
              Call:
                callee:
                  Path:
                    segments:
                      - double
                args:
                  - name: ~
                    value:
                      Call:
                        callee:
                          Path:
                            segments:
                              - double
                        args:
                          - name: ~
                            value:
                              Path:
                                segments:
                                  - x
                        generic_args: ~
                        is_propagating: false
                generic_args: ~
                is_propagating: false
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: apply_twice
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: x
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Let:
              annotations: []
              name: a
              ty: ~
              value:
                Call:
                  callee:
                    Path:
                      segments:
                        - double
                  args:
                    - name: ~
                      value:
                        Path:
                          segments:
                            - x
                  generic_args: ~
                  is_propagating: false
          - Return:
              Call:
                callee:
                  Path:
                    segments:
                      - double
                args:
                  - name: ~
                    value:
                      Path:
                        segments:
                          - a
                generic_args: ~
                is_propagating: false
