crates/fig-parser/tests/snapshots/integration_tests__functions__effect_generic_self.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: true
        receiver:
          - name: Seq
            generic_args:
              - Type:
                  name: T
                  bounds: []
                  default_type: ~
        name: push
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: true
        params:
          - name: item
            ty:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: true
        receiver:
          - name: Seq
            generic_args:
              - Type:
                  name: T
                  bounds: []
                  default_type: ~
        name: pop
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: true
        params: []
        return_types:
          - Nullable:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: true
        receiver:
          - name: Seq
            generic_args:
              - Type:
                  name: T
                  bounds: []
                  default_type: ~
        name: grow
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: true
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
