crates/fig-parser/tests/snapshots/integration_tests__functions__generic_basic.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: identity
        outer_generic_params: []
        func_generic_params:
          - Type:
              name: T
              bounds: []
              default_type: ~
        self_param: ~
        params:
          - name: x
            ty:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - T
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: swap
        outer_generic_params: []
        func_generic_params:
          - Type:
              name: A
              bounds: []
              default_type: ~
          - Type:
              name: B
              bounds: []
              default_type: ~
        self_param: ~
        params:
          - name: a
            ty:
              Path:
                path:
                  segments:
                    - A
                generic_args: []
          - name: b
            ty:
              Path:
                path:
                  segments:
                    - B
                generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: first
        outer_generic_params: []
        func_generic_params:
          - Type:
              name: T
              bounds: []
              default_type: ~
        self_param: ~
        params:
          - name: slice
            ty:
              Array:
                element_type:
                  Path:
                    path:
                      segments:
                        - T
                    generic_args: []
                size: ~
        return_types:
          - Nullable:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
      body:
        statements:
          - Pass
