crates/fig-parser/tests/snapshots/integration_tests__functions__generic_scope_syntax.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: add
        outer_generic_params:
          - Type:
              name: T
              bounds:
                - Path:
                    path:
                      segments:
                        - Add
                    generic_args:
                      - Path:
                          path:
                            segments:
                              - T
                          generic_args: []
              default_type: ~
        func_generic_params:
          - Type:
              name: T
              bounds: []
              default_type: ~
        self_param: ~
        params:
          - name: a
            ty:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
          - name: b
            ty:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - T
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Seq
            generic_args:
              - Type:
                  name: T
                  bounds: []
                  default_type: ~
        name: new
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - Seq
              generic_args:
                - Path:
                    path:
                      segments:
                        - T
                    generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Seq
            generic_args:
              - Type:
                  name: T
                  bounds: []
                  default_type: ~
        name: len
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: true
          is_mutable: false
        params: []
        return_types:
          - USize
      body:
        statements:
          - Pass
