crates/fig-parser/tests/snapshots/integration_tests__functions__generic_where.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: add
        outer_generic_params:
          - Type:
              name: T
              bounds:
                - Path:
                    path:
                      segments:
                        - Add
                    generic_args: []
              default_type: ~
        func_generic_params:
          - Type:
              name: T
              bounds: []
              default_type: ~
        self_param: ~
        params:
          - name: a
            ty:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
          - name: b
            ty:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - T
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: display
        outer_generic_params:
          - Type:
              name: T
              bounds:
                - Path:
                    path:
                      segments:
                        - Display
                    generic_args: []
              default_type: ~
        func_generic_params:
          - Type:
              name: T
              bounds: []
              default_type: ~
        self_param: ~
        params:
          - name: val
            ty:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - ok
              generic_args: []
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: copy_and_display
        outer_generic_params:
          - Type:
              name: T
              bounds:
                - Path:
                    path:
                      segments:
                        - Copy
                    generic_args: []
                - Path:
                    path:
                      segments:
                        - Display
                    generic_args: []
              default_type: ~
        func_generic_params:
          - Type:
              name: T
              bounds: []
              default_type: ~
        self_param: ~
        params:
          - name: val
            ty:
              Path:
                path:
                  segments:
                    - T
                generic_args: []
        return_types:
          - Path:
              path:
                segments:
                  - T
              generic_args: []
      body:
        statements:
          - Pass
