crates/fig-parser/tests/snapshots/integration_tests__functions__multiple_parameters.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: add
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: a
            ty: I32
          - name: b
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Return:
              BinaryOp:
                lhs:
                  Path:
                    segments:
                      - a
                op: Add
                rhs:
                  Path:
                    segments:
                      - b
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: max3
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: a
            ty: I32
          - name: b
            ty: I32
          - name: c
            ty: I32
        return_types:
          - I32
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: lerp
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: a
            ty: F64
          - name: b
            ty: F64
          - name: t
            ty: F64
        return_types:
          - F64
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver: ~
        name: clamp
        outer_generic_params: []
        func_generic_params: []
        self_param: ~
        params:
          - name: val
            ty: F64
          - name: lo
            ty: F64
          - name: hi
            ty: F64
        return_types:
          - F64
      body:
        statements:
          - Pass
