crates/fig-parser/tests/snapshots/integration_tests__functions__mut_self.snap
---
source: crates/fig-parser/tests/integration_tests.rs
expression: ast
---
items:
  - Struct:
      visibility: Default
      annotations: []
      is_packed: false
      name:
        segments:
          - Node
      generic_params: []
      requires: []
      fields:
        - name: data
          ty: I32
          visibility: Default
          annotations: []
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Node
            generic_args: []
        name: consume
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: false
          is_mutable: true
        params: []
        return_types:
          - I32
      body:
        statements:
          - Pass
  - Function:
      signature:
        visibility: Default
        annotations: []
        is_extern: false
        is_effect: false
        receiver:
          - name: Node
            generic_args: []
        name: transform
        outer_generic_params: []
        func_generic_params: []
        self_param:
          is_pointer: false
          is_mutable: true
        params: []
        return_types:
          - Path:
              path:
                segments:
                  - Node
              generic_args: []
      body:
        statements:
          - Pass
